加入了查看热门评论，评论歌曲，回复热门评论功能，经学长提醒将包名修改为全小写

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Than</string>
     <string name="la"></string>
     <string name="login_phone">手机号登录</string>
+    <string name="logout">退出登录</string>
+    <string name="todo">TODO</string>
+
 </resources>
